<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="AxisRotate" Id="{983dc9d9-cdec-4c33-92b3-8daef21be09c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM AxisRotate
VAR
	Axis : ST_Axis := (
		uiCounterValue := INPUT.IW_VGR_CounterValueRotate,
		bSetCounter := OUTPUT.QX_VGR_SetCounterRotate,
		uiSetCounterValue := OUTPUT.QW_VGR_SetCounterValueRotate,
		iControl := VGR.QW_VGR_PWM_Rotate_Control,
		iPWM := VGR.QW_VGR_PWM_Rotate_M3,
		bJogMinus := VGR.QX_VGR_M3_RotateClockwise_Q5,
		bJogPlus := VGR.QX_VGR_M3_RotateCounterclockwise_Q6
	);
END_VAR
]]></Declaration>
    <Implementation>
      <NWL>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="NWLImplementationObject">
              <v n="NetworkListComment">""</v>
              <v n="DefaultViewMode">"Ld"</v>
              <l2 n="NetworkList" cet="Network">
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" />
                  <l2 n="Connectors" />
                  <v n="Id">5L</v>
                </o>
              </l2>
              <v n="BranchCounter">1</v>
              <v n="ValidIds">true</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
            <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </NWL>
    </Implementation>
  </POU>
</TcPlcObject>